--- a/web/static/header.html
+++ b/web/static/header.html
@@ -1,12 +1,11 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Messenger</title>
-    <link href="../assets/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="shortcut icon" href="../assets/images/camerica.png" type="image/png">
+    <meta name="gost" content="width=device-width, initial-scale=1.0">
+    <title>GoST</title>
+    <link href="/assets/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="shortcut icon" href="/assets/images/camerica.png" type="image">
     <script src="/assets/js/jquery-3.3.1.min.js"></script>
     <script src="/assets/js/bootstrap.min.js"></script>
 </head>
