--- a/web/static/index.html
+++ b/web/static/index.html
@@ -4,7 +4,7 @@
       <br>
         <main>
           <div align="center">
-            <h1>Hello {{.Name}}!</h1>
+            <h1>Go System Tests {{.Name}}!</h1>
             Your Id is {{.Id}}
           </div>  
         </main>
