--- a/web/static/footer.html
+++ b/web/static/footer.html
@@ -3,7 +3,7 @@
 
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3">© 2018 Copyright:
-      <a href="http://www.inn4science.com/"> Inn4Science</a>
+      <a href="https://www.orbis.com.ua/"> Trident</a>
     </div>
     <!-- Copyright -->
 
