--- a/web/static/nav.html
+++ b/web/static/nav.html
@@ -15,7 +15,7 @@
         <a class="nav-item nav-link" href="#">About</a>
         <a class="nav-item nav-link" href="#">Profile</a>
         <a class="nav-item nav-link" href="../auth/sign-up">Sign Up</a>
-        <a class="nav-item nav-link" href="../auth/login">Login</a>
+        <a class="nav-item nav-link" href="../login">Login</a>
         <a class="nav-item nav-link disabled" alifn="left" href="#">Disabled</a>
       </div>
     </div>
