--- a/web/static/login.html
+++ b/web/static/login.html
@@ -4,7 +4,7 @@
  
     {{template "nav.html" .}}  
     </br>
-    <form action="/auth/login" method="post">
+    <form action="/login" method="post">
     <div class="container">
         <div class="row">    
             <div class="col-md-offset-3 col-md-6">
